Project

General

Profile

Actions

Bug #47004

closed

watch/notify may not function well after lingerOp failed

Added by shun song over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
rados
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 1 (1 open0 closed)

Related to RADOS - Bug #53789: CommandFailedError (rados/test_python.sh): "RADOS object not found" causes test_rados.TestWatchNotify.test_aio_notify to failPending BackportRadoslaw Zarzynski

Actions
Actions #1

Updated by Neha Ojha over 3 years ago

  • Project changed from Ceph to RADOS
  • Status changed from New to Fix Under Review
  • Assignee set to shun song
  • Pull request ID set to 36694
Actions #2

Updated by Kefu Chai over 3 years ago

  • Status changed from Fix Under Review to Resolved
Actions #3

Updated by Radoslaw Zarzynski over 1 year ago

  • Related to Bug #53789: CommandFailedError (rados/test_python.sh): "RADOS object not found" causes test_rados.TestWatchNotify.test_aio_notify to fail added
Actions

Also available in: Atom PDF