osdc: fix lingerOp stray

when linger ping failed with error, like ENOTCONN
  last_error set to error.
  after that, last_error will never recovery to succecss(0),
  even reconnecting successfully, which stops from sending linger ping to osd.
  as a result, this normal client ** can't receive notify message **
  after osd_client_watch_timeout goes away.

  Fixes: https://tracker.ceph.com/issues/47004

Signed-off-by: Song Shun <song.shun3@zte.com.cn>